feat: Add Superpowers plugin and update documentation (v1.5.0)
- Add Superpowers plugin (obra/superpowers-marketplace) documentation
- Update AI Development Tooling section with TDD, debugging, planning workflows
- Add TODO task to propagate AI plugins across ~/Projects/ repos
- Update path conventions to use ~/Projects/ structure
- Add Version Control & GitHub section to CLAUDE.md
- Bump versions: CLAUDE.md v1.5.0, TODO.md v1.4.0

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -123,7 +123,7 @@
       <div class="links-section">
         <h4>📂 Repositories</h4>
         <div class="links-grid">
-          <a href="https://github.com/Absolute-Space-GHCP/jl-dev-environment-gm-v1.0" target="_blank" class="link-btn" data-link-id="github-dev-env">
+          <a href="https://github.com/Absolute-Space-GHCP/jl-dev-environment-gm" target="_blank" class="link-btn" data-link-id="github-dev-env">
             <span class="link-icon">📘</span> GitHub (Dev Env)
           </a>
           <a href="https://github.com/Absolute-Space-GHCP/ai-agents-gmaster-build" target="_blank" class="link-btn" data-link-id="github-ai-agents">
